--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,46 @@
 </head>
 <body>
 
-  <h1>Gwennan</h1>
+  <header><h1>Gwennan Dafis</h1></header>
 
-
-
+  <section class="projects">
+    <div class="project">
+      <div class="back">
+        <h2>Community Gardens</h2>
+      </div>
+      <img src="./img/community-garden.png" alt="">
+    </div>
+    <div class="project">
+      <div class="back">
+          <h2>Home</h2>
+      </div>
+      <img src="./img/home.jpg" alt="">
+    </div>
+    <div class="project">
+      <div class="back">
+          <h2>Charlotte</h2>
+      </div>
+      <img src="./img/charlotte.jpg" alt="">
+    </div>
+    <div class="project">
+      <div class="back">
+          <h2>Mamgu</h2>
+      </div>
+      <img src="./img/mamgu.jpg" alt="">
+    </div>
+    <div class="project">
+      <div class="back">
+          <h2>Sustainability</h2>
+      </div>
+      <img src="./img/sustainability.jpg" alt="">
+    </div>
+    <div class="project">
+      <div class="back">
+          <h2>CV</h2>
+      </div>
+      <img src="./img/sustainability.jpg" alt="">
+    </div>
+  </section>
 
 </body>
 </html>
