--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Document</title>
+  <title>Gwennan Dafis | Designer</title>
 </head>
 <body>
 
@@ -13,31 +13,31 @@
 
   <section class="projects">
     <div class="project">
-      <div class="back">
+      <div class="back lightskyblue">
         <h2>Community Gardens</h2>
       </div>
       <img src="./img/community-garden.png" alt="">
     </div>
     <div class="project">
-      <div class="back">
+      <div class="back steelblue">
           <h2>Home</h2>
       </div>
       <img src="./img/home.jpg" alt="">
     </div>
     <div class="project">
-      <div class="back">
+      <div class="back palevioletred">
           <h2>Charlotte</h2>
       </div>
       <img src="./img/charlotte.jpg" alt="">
     </div>
     <div class="project">
-      <div class="back">
+      <div class="back darkslateblue">
           <h2>Mamgu</h2>
       </div>
       <img src="./img/mamgu.jpg" alt="">
     </div>
     <div class="project">
-      <div class="back">
+      <div class="back sandybrown">
           <h2>Sustainability</h2>
       </div>
       <img src="./img/sustainability.jpg" alt="">
