Safari fix for backface

--- a/public/index.html
+++ b/public/index.html
@@ -14,37 +14,37 @@
   <section class="projects">
     <div class="project">
       <div class="back lightskyblue">
-        <h2>Community Gardens</h2>
+        <a href="./projects/community.html"> Community Gardens </a>
       </div>
       <img src="./img/community-garden.png" alt="">
     </div>
     <div class="project">
       <div class="back steelblue">
-          <h2>Home</h2>
+          <a href="./projects/home.html"> Home </a>
       </div>
       <img src="./img/home.jpg" alt="">
     </div>
     <div class="project">
       <div class="back palevioletred">
-          <h2>Charlotte</h2>
+          <a href="./projects/charlotte.html"> Charlotte </a>
       </div>
       <img src="./img/charlotte.jpg" alt="">
     </div>
     <div class="project">
       <div class="back darkslateblue">
-          <h2>Mamgu</h2>
+          <a href="./projects/mamgu.html"> Mamgu </a>
       </div>
       <img src="./img/mamgu.jpg" alt="">
     </div>
     <div class="project">
       <div class="back sandybrown">
-          <h2>Sustainability</h2>
+        <a href="./projects/sustainability.html"> Sustainability</a>
       </div>
       <img src="./img/sustainability.jpg" alt="">
     </div>
     <div class="project">
       <div class="back">
-          <h2>CV</h2>
+          <a href="./projects/cv.html"> CV </a>
       </div>
       <img src="./img/sustainability.jpg" alt="">
     </div>
