To coming soon..

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,16 @@
   <link rel="stylesheet" href="./css/style.css">
   <title>Gwennan Dafis | Designer</title>
 </head>
+
 <body>
 
-  <header><h1>Gwennan Dafis</h1></header>
+  <header>
+    <h1>Gwennan Dafis</h1>
+  </header>
 
-  <section class="projects">
+  <h2>Coming soon..</h2>
+
+  <!-- <section class="projects">
     <div class="project">
       <div class="back lightskyblue">
         <a href="./projects/community.html"> Community Gardens </a>
@@ -48,7 +54,8 @@
       </div>
       <img src="./img/sustainability.jpg" alt="">
     </div>
-  </section>
+  </section> -->
 
 </body>
+
 </html>
