Can move to showcase view, with transition

--- a/public/index.html
+++ b/public/index.html
@@ -6,55 +6,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/style.css">
+  <script src="./scripts/main.js"></script>
   <title>Gwennan Dafis | Designer</title>
 </head>
 
 <body>
-
   <header>
-    <h1>Gwennan Dafis</h1>
+    <section class="column title">
+      <h1 class="focus title">Gwennan Dafis</h1>
+    </section>
+    <section class="column pink">
+      <p class="project focus">A to B</p>
+    </section>
+    <section class="column purple">
+      <p class="project focus">Homage</p>
+    </section>
+    <section class="column orange">
+      <p class="project focus">Travel</p>
+    </section>
+    <section class="column yellow">
+      <p class="project focus">About</p>
+    </section>
   </header>
 
-  <h2>Coming soon..</h2>
+  <section class="showcase">
+    <div class="content">
+      <div class="left showcase-box">
+      </div>
+      <div class="main showcase-box"></div>
+      <div class="right showcase-box"></div>
+    </div>
 
-  <!-- <section class="projects">
-    <div class="project">
-      <div class="back lightskyblue">
-        <a href="./projects/community.html"> Community Gardens </a>
-      </div>
-      <img src="./img/community-garden.png" alt="">
-    </div>
-    <div class="project">
-      <div class="back steelblue">
-          <a href="./projects/home.html"> Home </a>
-      </div>
-      <img src="./img/home.jpg" alt="">
-    </div>
-    <div class="project">
-      <div class="back palevioletred">
-          <a href="./projects/charlotte.html"> Charlotte </a>
-      </div>
-      <img src="./img/charlotte.jpg" alt="">
-    </div>
-    <div class="project">
-      <div class="back darkslateblue">
-          <a href="./projects/mamgu.html"> Mamgu </a>
-      </div>
-      <img src="./img/mamgu.jpg" alt="">
-    </div>
-    <div class="project">
-      <div class="back sandybrown">
-        <a href="./projects/sustainability.html"> Sustainability</a>
-      </div>
-      <img src="./img/sustainability.jpg" alt="">
-    </div>
-    <div class="project">
-      <div class="back">
-          <a href="./projects/cv.html"> CV </a>
-      </div>
-      <img src="./img/sustainability.jpg" alt="">
-    </div>
-  </section> -->
+  </section>
+
 
 </body>
 
