Clickable image gallery, vanilla javascript

--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,14 @@
   <section class="showcase">
     <div class="content">
       <div class="left showcase-box">
+        <img src="./img/mamgu.jpg" alt="">
       </div>
-      <div class="main showcase-box"></div>
-      <div class="right showcase-box"></div>
+      <div class="main showcase-box">
+        <img src="./img/sustainability.jpg" alt="">
+      </div>
+      <div class="right showcase-box">
+        <img src="./img/sustainability.jpg" alt="">
+      </div>
     </div>
 
   </section>
