can change image src, and smoother image transition

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/style.css">
+  <link href='http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
   <script src="./scripts/main.js"></script>
   <title>Gwennan Dafis | Designer</title>
 </head>
@@ -13,32 +14,32 @@
 <body>
   <header>
     <section class="column title">
-      <h1 class="focus title">Gwennan Dafis</h1>
+      <h1 class="title focus">Gwennan Dafis</h1>
     </section>
     <section class="column pink">
-      <p class="project focus">A to B</p>
+      <p class="project focus atob">A to B</p>
     </section>
     <section class="column purple">
-      <p class="project focus">Homage</p>
+      <p class="project focus homage">Homage</p>
     </section>
     <section class="column orange">
-      <p class="project focus">Travel</p>
+      <p class="project focus travel">Travel</p>
     </section>
     <section class="column yellow">
-      <p class="project focus">About</p>
+      <p class="project focus about">About</p>
     </section>
   </header>
 
   <section class="showcase">
     <div class="content">
       <div class="left showcase-box">
-        <img src="./img/mamgu.jpg" alt="">
+        <img class='showcase-img' src="" alt="">
       </div>
       <div class="main showcase-box">
-        <img src="./img/sustainability.jpg" alt="">
+        <img class='showcase-img' src="" alt="">
       </div>
       <div class="right showcase-box">
-        <img src="./img/sustainability.jpg" alt="">
+        <img class='showcase-img' src="" alt="">
       </div>
     </div>
 
