Added some photos, improve navigation

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       <p class="project focus homage">Homage</p>
     </section>
     <section class="column orange">
-      <p class="project focus travel">Travel</p>
+      <p class="project focus community-garden">Community Garden</p>
     </section>
     <section class="column yellow">
       <p class="project focus about">About</p>
