Font to verdana

--- a/public/index.html
+++ b/public/index.html
@@ -34,16 +34,14 @@
     <div class="content">
       <div class="left showcase-box">
         <img class='showcase-img' src="" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, aut?</p>
       </div>
       <div class="main showcase-box">
         <img class='showcase-img' src="" alt="">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio.</p>
       </div>
       <div class="right showcase-box">
         <img class='showcase-img' src="" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, iusto!</p>
       </div>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, delectus.</p>
     </div>
 
   </section>
