Font to verdana

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
       <div class="right showcase-box">
         <img class='showcase-img' src="" alt="">
       </div>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, delectus.</p>
+      <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, delectus.</p>
     </div>
 
   </section>
