Added text and about

--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,20 @@
         <img class='showcase-img' src="" alt="">
       </div>
     </div>
-    <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, delectus.</p>
+    <p class="desc"></p>
 
+  </section>
+
+  <section class="about-content">
+    <p>Gwennan is a London and Wales based illustrator & designer.
+    </p>
+
+    <p>Soon to be a Graduate from Camberwell Collage of Arts.</p>
+    <p>She is a keen collaborator, interested in transforming information and language into patterns. Capturing the Welsh culture
+      through urbanised eyes.</p>
+    <p>Gwennan's work explores the possibility of using art as language. She aims to re-create immersive designs that comments
+      on everyday routines along with engaging with local communities for inspiration and collaboration. Her work is made
+      by using striking colours, bold patterns and contemporary with a twist of heritage.</p>
   </section>
 
 
