Signature added, and centre align text

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
   </section>
 
   <section class="about-content">
+    <img src="./img/signature.png" alt="">
     <p>Gwennan is a London and Wales based illustrator & designer.
     </p>
 
