--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 
   <section class="about-content">
     <img src="./img/signature.png" alt="">
-    <p>Gwennan is a London and Wales based illustrator & designer.
+    <p>Gwennan is a London and Wales based illustrator &amp; designer.
     </p>
 
     <p>Soon to be a Graduate from Camberwell Collage of Arts.</p>
@@ -59,6 +59,9 @@
       by using striking colours, bold patterns and contemporary with a twist of heritage.</p>
   </section>
 
+  <footer>
+    <p>&copy; 2018 Gwennan Dafis</p>
+  </footer>
 
 </body>
 
