--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,7 @@
     <p>Gwennan's work explores the possibility of using art as language. She aims to re-create immersive designs that comments
       on everyday routines along with engaging with local communities for inspiration and collaboration. Her work is made
       by using striking colours, bold patterns and contemporary with a twist of heritage.</p>
+    <p>Please don't hesitate to email me at gredavies@hotmail.co.uk</p>
   </section>
 
   <footer>
