huge reduction in image file size

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
     <section class="column pink">
       <p class="project focus atob">A to B</p>
     </section>
-    <section class="column purple"></section>
-    <p class="project focus homage">Homage</p>
+    <section class="column purple">
+      <p class="project focus homage">Homage</p>
     </section>
     <section class="column orange">
       <p class="project focus community-garden">Community Garden</p>
